nesc-frontend/src/test/resources/integration/programs/good/good19/S.nc
interface S<T>
{
   command void c(const T* ptr);
   event void e(const T* ptr);
}
