nesc-frontend/src/test/resources/integration/programs/bad/bad22/I.nc
interface I<T @integer()>
{
   command T c();
   event void e(T id);
}
